Adds friends list

--- a/newFrontEnd/app.css
+++ b/newFrontEnd/app.css
@@ -6,3 +6,42 @@
     left: 200%;
     cursor: pointer;
 }
+
+.image {
+  width: 75px;
+  height: 75px;
+  margin: 10px;
+}
+
+.friend-container {
+  display: flex;
+  flex-flow: wrap;
+}
+
+[tooltip]:before {
+    /* needed - do not touch */
+    content: attr(tooltip);
+    position: absolute;
+    opacity: 0;
+
+    /* customizable */
+    transition: all 0.15s ease;
+    padding: 10px;
+    color: #333;
+    border-radius: 10px;
+    box-shadow: 2px 2px 1px silver;
+}
+
+[tooltip]:hover:before {
+    /* needed - do not touch */
+    opacity: 1;
+
+    /* customizable */
+    background: lightgray;
+    margin-top: -35px;
+    margin-left: 20px;
+}
+
+[tooltip]:not([tooltip-persistent]):before {
+    pointer-events: none;
+}
