Adds dynamic bio

--- a/newFrontEnd/app.css
+++ b/newFrontEnd/app.css
@@ -52,7 +52,7 @@
 
 /* learn more */
 
-.show-more {
+/*.show-more {
     padding: 10px 0;
     text-align: center;
 }
@@ -68,4 +68,4 @@
 
 .text-content{
     line-height: 1em;
-}
+}*/
